--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,5 +30,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('%PUBLIC_URL%/service-worker.js');
+      }
+    </script>
   </body>
 </html>
